fixed bug #22355: PDF Generation: Course List is collapsed

--- a/templates/default/less/Modules/Portfolio/delos.less
+++ b/templates/default/less/Modules/Portfolio/delos.less
@@ -6,7 +6,7 @@ ul.ilPCMyCoursesCourseList > li {
 
 ul.ilPCMyCoursesObjectiveList > li {
 	margin-top: 5px; 
-	margin-left: 15px;
+	margin-left: 40px;
 }
 
 a.ilPCMyCoursesToggle {
@@ -52,4 +52,8 @@ body.ilPrtfPdfBody {
 
 body.ilPrtfPdfBody h1.ilc_PrintPageTitle {
 	border-bottom: 1px solid #000000;
+}
+
+body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
+	visibility: hidden;
 }
